[GTK] Visited links of a page group should be removed when clearing back/forward list https://bugs.webkit.org/show_bug.cgi?id=71052

Patch by Zan Dobersek <zandobersek@gmail.com> on 2011-11-02
Reviewed by Martin Robinson.

Source/WebKit/gtk:

When clearing back-forward list, also remove the visited links from page's page group.

* webkit/webkitwebbackforwardlist.cpp:
(webkit_web_back_forward_list_clear):

LayoutTests:

Rebaseline Gtk-related expectations now that links to previously loaded tests do not
appear as visited after enhancing the clearing of back-forward list that is done after
each test.

* platform/gtk/fast/block/margin-collapse/010-expected.txt:
* platform/gtk/fast/block/margin-collapse/011-expected.txt:
* platform/gtk/fast/block/margin-collapse/012-expected.txt:
* platform/gtk/fast/block/margin-collapse/015-expected.txt:
* platform/gtk/fast/block/margin-collapse/016-expected.txt:
* platform/gtk/fast/block/margin-collapse/020-expected.txt:
* platform/gtk/fast/block/margin-collapse/056-expected.txt:
* platform/gtk/fast/block/margin-collapse/059-expected.txt:
* platform/gtk/fast/block/margin-collapse/block-inside-inline/010-expected.txt:
* platform/gtk/fast/block/margin-collapse/block-inside-inline/011-expected.txt:
* platform/gtk/fast/block/margin-collapse/block-inside-inline/012-expected.txt:
* platform/gtk/fast/block/margin-collapse/block-inside-inline/015-expected.txt:
* platform/gtk/fast/block/margin-collapse/block-inside-inline/016-expected.txt:
* platform/gtk/fast/block/margin-collapse/block-inside-inline/020-expected.txt:
* platform/gtk/tables/mozilla/marvin/backgr_layers-opacity-expected.txt:
* platform/gtk/tables/mozilla/marvin/backgr_position-table-expected.txt:
* platform/gtk/tables/mozilla/marvin/backgr_simple-table-cell-expected.txt:
* platform/gtk/tables/mozilla/marvin/backgr_simple-table-column-expected.txt:
* platform/gtk/tables/mozilla/marvin/backgr_simple-table-column-group-expected.txt:
* platform/gtk/tables/mozilla/marvin/backgr_simple-table-expected.txt:
* platform/gtk/tables/mozilla/marvin/backgr_simple-table-row-expected.txt:
* platform/gtk/tables/mozilla/marvin/backgr_simple-table-row-group-expected.txt:
* platform/gtk/tables/mozilla_expected_failures/marvin/backgr_border-table-column-expected.txt:
* platform/gtk/tables/mozilla_expected_failures/marvin/backgr_border-table-expected.txt:
* platform/gtk/tables/mozilla_expected_failures/marvin/backgr_border-table-row-expected.txt:
* platform/gtk/tables/mozilla_expected_failures/marvin/backgr_border-table-row-group-expected.txt:
* platform/gtk/tables/mozilla_expected_failures/marvin/backgr_layers-hide-expected.txt:
* platform/gtk/tables/mozilla_expected_failures/marvin/backgr_layers-show-expected.txt:
* platform/gtk/tables/mozilla_expected_failures/marvin/backgr_position-table-cell-expected.txt:
* platform/gtk/tables/mozilla_expected_failures/marvin/backgr_position-table-column-expected.txt:
* platform/gtk/tables/mozilla_expected_failures/marvin/backgr_position-table-row-expected.txt:
* platform/gtk/tables/mozilla_expected_failures/marvin/backgr_position-table-row-group-expected.txt:

Canonical link: https://commits.webkit.org/87674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99082 268f45cc-cd09-0410-ab3c-d52691b4dbfc